services.py: use GQL to fetch git repos

--- a/hubsrht/templates/sources-select.html
+++ b/hubsrht/templates/sources-select.html
@@ -75,7 +75,7 @@
           >Select repo&nbsp;{{ icon("caret-right") }}</button>
           {% endif %}
           <a
-            href="{{origin}}/{{ repo["owner"]["canonical_name"] }}/{{repo["name"]}}"
+            href="{{origin}}/{{ repo["owner"]["canonicalName"] }}/{{repo["name"]}}"
             target="_blank"
             rel="noopener"
           >{{ repo["name"] }}</a>
