services.py: rewrite legacy API usage
This leaves in place some legacy API use regarding the handling of
ticket references in git commits, which is a bit more complex to address
and will be handled in a follow-up patch.

--- a/hubsrht/templates/mailing-list-new.html
+++ b/hubsrht/templates/mailing-list-new.html
@@ -142,7 +142,7 @@
           {% endif %}
           <a
             href="{{get_origin("lists.sr.ht",
-              external=True)}}/{{ list["owner"]["canonical_name"] }}/{{list["name"]}}"
+              external=True)}}/{{ list["owner"]["canonicalName"] }}/{{list["name"]}}"
             target="_blank"
             rel="noopener"
           >{{ list["name"] }}</a>
