--- a/hubsrht/templates/tracker-new.html
+++ b/hubsrht/templates/tracker-new.html
@@ -78,7 +78,7 @@
           {% endif %}
           <a
             href="{{get_origin("todo.sr.ht",
-              external=True)}}/{{ tracker["owner"]["canonical_name"] }}/{{tracker["name"]}}"
+              external=True)}}/{{ tracker["owner"]["canonicalName"] }}/{{tracker["name"]}}"
             target="_blank"
             rel="noopener"
           >{{ tracker["name"] }}</a>
