--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -207,7 +207,7 @@
     </div>
     {% endif %}
   </div>
-  {% if current_user and current_user.user_type.value == "admin" %}
+  {% if current_user and current_user.user_type.value == "ADMIN" %}
   <div class="row" style="margin-top: 5rem">
     <div class="col-md-6">
       <h3>Feature this project</h3>
