Add nofollow to #tags links on projects
This prevents spiders from crawling ever-more-expensive searches by
adding more tags at each step.

--- a/hubsrht/templates/index.html
+++ b/hubsrht/templates/index.html
@@ -45,7 +45,7 @@
         <div class="tags">
         {% for tag in feature.project.tags %}
           <a href="{{url_for("public.project_index", search="#"+tag)}}"
-             class="tag">#{{tag}}</a>
+             class="tag" rel="nofollow">#{{tag}}</a>
         {% endfor %}
         </div>
         {% endif %}
