--- a/hubsrht/templates/featured-projects.html
+++ b/hubsrht/templates/featured-projects.html
@@ -27,7 +27,7 @@
           <div class="tags">
           {% for tag in project.tags %}
             <a href="{{url_for("public.project_index", search="#"+tag)}}"
-               class="tag">#{{tag}}</a>
+               class="tag" rel="nofollow">#{{tag}}</a>
           {% endfor %}
           </div>
           {% endif %}
