--- a/hubsrht/templates/project-index.html
+++ b/hubsrht/templates/project-index.html
@@ -72,7 +72,7 @@
           <div class="tags">
           {% for tag in project.tags %}
             <a href="{{url_for("public.project_index", search="#"+tag)}}"
-               class="tag">#{{tag}}</a>
+               class="tag" rel="nofollow">#{{tag}}</a>
           {% endfor %}
           </div>
           {% endif %}
@@ -97,7 +97,7 @@
           {% for tag in feature.project.tags %}
             <a href="{{url_for("public.project_index",
                   search=((search or "").strip() + " #"+tag).lstrip())}}"
-               class="tag">#{{tag}}</a>
+               class="tag" rel="nofollow">#{{tag}}</a>
           {% endfor %}
           </span>
           {% endif %}
