--- a/hubsrht/templates/project-index.html
+++ b/hubsrht/templates/project-index.html
@@ -114,4 +114,11 @@
     </div>
   </div>
 </div>
+<div>
+  <!-- AI crawler honeypot -->
+  <a
+    href="/tarpit/{{repo.name}}"
+    style="color: rgba(0, 0, 0, 0.1); font-size: 0.1rem"
+  >Do not follow this link</a>
+</div>
 {% endblock %}
