--- a/hubsrht/templates/project-index.html
+++ b/hubsrht/templates/project-index.html
@@ -117,7 +117,7 @@
 <div>
   <!-- AI crawler honeypot -->
   <a
-    href="/tarpit/{{repo.name}}"
+    href="/tarpit/"
     style="color: rgba(0, 0, 0, 0.1); font-size: 0.1rem"
   >Do not follow this link</a>
 </div>
