--- a/hubsrht/templates/project-create.html
+++ b/hubsrht/templates/project-create.html
@@ -27,8 +27,10 @@
         name="name"
         class="form-control {{valid.cls("name")}}"
         placeholder="my-cool-project"
-        autofocus required
-        value="{{name or ""}}" />
+        autofocus
+        value="{{name or ""}}"
+        maxlength="128"
+        required />
       {{valid.summary("name")}}
     </div>
     <div class="form-group">
@@ -39,8 +41,9 @@
         name="description"
         class="form-control {{valid.cls("description")}}"
         placeholder="Short description of your project, shown in lists"
-        required
-        value="{{description or ""}}" />
+        value="{{description or ""}}"
+        maxlength="512"
+        required />
       {{valid.summary("description")}}
     </div>
     <div class="form-group">
