web: remove delegated OAuth components

--- a/hubsrht/templates/index.html
+++ b/hubsrht/templates/index.html
@@ -17,7 +17,7 @@
         href="{{get_origin("meta.sr.ht", external=True)}}/register"
       >Register here {{icon('caret-right')}}</a>
       or
-      <a href="{{oauth_url}}">
+      <a href="{{login_url}}">
         Log in {{icon('caret-right')}}
       </a>
       to get started, or check out some of our featured projects:
