events: replace event.project_id by an association table
This introduces an event/project association table that replaces the
event.project_id column, and migrates all the existing data.

This is a pre-requisite to deduping the events shared by several lists,
repositories or trackers, and close the related ticket.

Related-to: https://todo.sr.ht/~sircmpwn/hub.sr.ht/38
Signed-off-by: Simon Martin <simon@nasilyan.com>

--- a/hubsrht/templates/event.html
+++ b/hubsrht/templates/event.html
@@ -24,9 +24,12 @@ TODO: implement event type {{event.event_type}}
   <small class="text-muted">
     {{event.created | date}}
     {% if project %}
-    via <a href="{{url_for("projects.summary_GET",
-      owner=event.project.owner.canonical_name,
-      project_name=event.project.name)}}">{{event.project.name}}</a>
+    via
+    {% for p in event.projects %}
+    <a href="{{url_for("projects.summary_GET",
+      owner=p.owner.canonical_name,
+      project_name=p.name)}}">{{p.name}}</a>{% if not loop.last %}, {% endif %}
+    {% endfor %}
     {% endif %}
   </small>
 </div>
