Add "report abuse" link to project pages
To help us identify spam etc.

--- a/hubsrht/templates/project-summary.html
+++ b/hubsrht/templates/project-summary.html
@@ -130,6 +130,10 @@
               owner=owner, project_name=project.name)}}"
             class="btn btn-link"
           >RSS&nbsp;{{icon("caret-right")}}</a>
+          <a
+            href="mailto:{{cfg("sr.ht", "owner-email")}}"
+            class="btn btn-link"
+          >Report abuse {{icon('caret-right')}}</a>
         </div>
       </div>
     </div>
